--- a/docs/modules/ROOT/nav.adoc
+++ b/docs/modules/ROOT/nav.adoc
@@ -1,2 +1,4 @@
-* xref:ROOT:README.adoc[Home]
-* xref:ROOT:ROOT:index.adoc[_Return to main docs_]
+* xref:ROOT:README.adoc[Main Module]
+* Submodules
+** xref:ROOT:eks/README.adoc[EKS]
+* xref:ROOT:ROOT:index.adoc[_Return to DevOps Stack docs_]
