--- a/README.adoc
+++ b/README.adoc
@@ -4,10 +4,7 @@ A https://devops-stack.io[DevOps Stack] module to deploy and configure https://t
 
 The Thanos chart used by this module is shipped in this repository as well, in order to avoid unwanted behavior by using unsupported versions. The chart version used is the *10.5.5*. All the Thanos charts are available https://github.com/bitnami/charts/tree/master/bitnami/thanos[here] as well as the documentation for the `values.yaml` (the default is available https://github.com/bitnami/charts/blob/master/bitnami/thanos/values.yaml[here]).
 
-*Since this module is meant to be instantiated using its submodules, the usage documentation is available in each submodule.*
-
-- link:eks/README.adoc[EKS]
-// - link:aks/README.adoc[EKS]
+*Since this module is meant to be instantiated using its submodules, the usage documentation is available in each submodule* ( link:eks[EKS] | link:aks[AKS] | link:sks[SKS] ).
 
 Below you will only find the technical reference automatically generated from the `*.tf` files on the root module. 
 
