--- a/eks/README.adoc
+++ b/eks/README.adoc
@@ -68,26 +68,28 @@ module "thanos" {
     oidc = module.oidc.oidc
   }
 
-  helm_values = [
-    map = {
-      string = "string"
-      bool   = true
+  helm_values = [{ # Note the curly brackets here
+    thanos = {
+      map = {
+        string = "string"
+        bool   = true
+      }
+      sequence = [
+        {
+          key1 = "value1"
+          key2 = "value2"
+        },
+        {
+          key1 = "value1"
+          key2 = "value2"
+        },
+      ]
+      sequence2 = [
+        "string1",
+        "string2"
+      ]
     }
-    sequence = [
-      {
-        key1 = "value1"
-        key2 = "value2"
-      },
-      {
-        key1 = "value1"
-        key2 = "value2"
-      },
-    ]
-    sequence2 = [
-      "string1",
-      "string2"
-    ]
-  ]
+  }]
 
   depends_on = [module.argocd_bootstrap]
 }
