docs: change terminology to variant instead of submodule

--- a/eks/README.adoc
+++ b/eks/README.adoc
@@ -1,6 +1,6 @@
-= EKS submodule
+= EKS variant
 
-This folder contains the submodule to use when deploying in AWS using an EKS cluster.
+This folder contains the variant to use when deploying in AWS using an EKS cluster.
 
 == Usage
 
