--- a/README.adoc
+++ b/README.adoc
@@ -117,7 +117,7 @@ Description: Override of target revision of the application chart.
 
 Type: `string`
 
-Default: `"v1.0.0"`
+Default: `"v1.0.0-rc2"`
 
 ==== [[input_thanos]] <<input_thanos,thanos>>
 
@@ -137,7 +137,7 @@ Description: ID to pass other modules in order to refer to this module as a depe
 
 ==== [[output_thanos_enabled]] <<output_thanos_enabled,thanos_enabled>>
 
-Description: Boolean indicating wether Thanos is enabled.
+Description: Boolean indicating whether Thanos is enabled.
 // END_TF_DOCS
 
 === Reference in table format 
@@ -222,7 +222,7 @@ Description: Boolean indicating wether Thanos is enabled.
 |[[input_target_revision]] <<input_target_revision,target_revision>>
 |Override of target revision of the application chart.
 |`string`
-|`"v1.0.0"`
+|`"v1.0.0-rc2"`
 |no
 
 |[[input_thanos]] <<input_thanos,thanos>>
@@ -239,7 +239,7 @@ Description: Boolean indicating wether Thanos is enabled.
 |===
 |Name |Description
 |[[output_id]] <<output_id,id>> |ID to pass other modules in order to refer to this module as a dependency.
-|[[output_thanos_enabled]] <<output_thanos_enabled,thanos_enabled>> |Boolean indicating wether Thanos is enabled.
+|[[output_thanos_enabled]] <<output_thanos_enabled,thanos_enabled>> |Boolean indicating whether Thanos is enabled.
 |===
 // END_TF_TABLES
 ====
