--- a/README.adoc
+++ b/README.adoc
@@ -1,16 +1,15 @@
 = devops-stack-module-thanos
 // Document attributes to replace along the document
 :chart-version: 11.5.5
-:repo-url-release-commit: https://github.com/bitnami/charts/tree/8ef44e189c6a143153e28f4ad8510b96a41b62a9/bitnami/thanos
 
 A https://devops-stack.io[DevOps Stack] module to deploy and configure https://thanos.io[Thanos].
 
-The Thanos' chart used by this module is shipped in this repository as well, in order to avoid any unwanted behaviors caused by unsupported versions. 
+The Thanos chart used by this module is shipped in this repository as well, in order to avoid any unwanted behaviors caused by unsupported versions. 
 
 [cols="1,1,1",options="autowidth,header"]
 |===
 |Current Chart Version |Original Repository |Default Values
-|*{chart-version}* |https://github.com/bitnami/charts/tree/master/bitnami/thanos[Chart] |{repo-url-release-commit}/values.yaml[`values.yaml`]
+|*{chart-version}* |https://github.com/bitnami/charts/tree/master/bitnami/thanos[Chart] |https://artifacthub.io/packages/helm/bitnami/thanos?modal=values[`values.yaml`]
 |===
 
 *Since this module is meant to be instantiated using its variants, the usage documentation is available in each variant* ( xref:./eks/README.adoc[EKS] ).
@@ -117,7 +116,7 @@ Description: Override of target revision of the application chart.
 
 Type: `string`
 
-Default: `"v1.0.0"`
+Default: `"v1.0.0-rc2"`
 
 ==== [[input_thanos]] <<input_thanos,thanos>>
 
@@ -137,7 +136,7 @@ Description: ID to pass other modules in order to refer to this module as a depe
 
 ==== [[output_thanos_enabled]] <<output_thanos_enabled,thanos_enabled>>
 
-Description: Boolean indicating wether Thanos is enabled.
+Description: Boolean indicating whether Thanos is enabled.
 // END_TF_DOCS
 
 === Reference in table format 
@@ -222,7 +221,7 @@ Description: Boolean indicating wether Thanos is enabled.
 |[[input_target_revision]] <<input_target_revision,target_revision>>
 |Override of target revision of the application chart.
 |`string`
-|`"v1.0.0"`
+|`"v1.0.0-rc2"`
 |no
 
 |[[input_thanos]] <<input_thanos,thanos>>
@@ -239,7 +238,7 @@ Description: Boolean indicating wether Thanos is enabled.
 |===
 |Name |Description
 |[[output_id]] <<output_id,id>> |ID to pass other modules in order to refer to this module as a dependency.
-|[[output_thanos_enabled]] <<output_thanos_enabled,thanos_enabled>> |Boolean indicating wether Thanos is enabled.
+|[[output_thanos_enabled]] <<output_thanos_enabled,thanos_enabled>> |Boolean indicating whether Thanos is enabled.
 |===
 // END_TF_TABLES
 ====
