--- a/kind/README.adoc
+++ b/kind/README.adoc
@@ -1,217 +1,167 @@
+= KinD variant
+
+This folder contains the variant to use when deploying locally using a https://github.com/camptocamp/devops-stack-module-cluster-kind[KinD] cluster and an S3 bucket deployed using the https://github.com/camptocamp/devops-stack-module-minio[MinIO] module of the https://devops-stack.io[DevOps Stack].
+
+== Usage
+
+This module can be declared by adding the following block on your Terraform configuration:
+
+[source,terraform]
+----
+module "thanos" {
+  source = "git::https://github.com/camptocamp/devops-stack-module-thanos//kind?ref=<RELEASE>"
+
+  cluster_name     = module.kind.cluster_name
+  argocd_namespace = local.argocd_namespace
+  base_domain      = module.kind.base_domain
+  cluster_issuer   = local.cluster_issuer
+
+  metrics_storage = {
+    bucket_name       = "thanos" # Name given to the bucket
+    endpoint          = module.minio.endpoint
+    access_key        = "readwrite_user" # Name given to the read-write user created by the module MinIO.
+    secret_access_key = module.minio.readwrite_secret_key
+  }
+
+  thanos = {
+    oidc = module.oidc.oidc
+  }
+
+  depends_on = [module.oidc]
+}
+----
+
+As you can see, a minimum requirement for this module is an S3 bucket that uses a user with read/write permissions, both created in the MinIO module we provide (more information below).
+
+NOTE: There are multiple other options that can be set, as in the other modules, but we will not go into detail as this variant is mainly for test and development purposes. You can check the documentation on the other modules to get an idea.
+
+If there is a need to configure something besides the common settings that we have provided, you can customize the chart's `values.yaml` by adding an Helm configuration as an HCL structure:
+
+[source,terraform]
+----
+module "thanos" {
+  source = "git::https://github.com/camptocamp/devops-stack-module-thanos.git//eks"
+
+  cluster_name            = var.cluster_name
+  argocd_namespace        = module.cluster.argocd_namespace
+  base_domain             = module.cluster.base_domain
+  cluster_issuer          = var.cluster_issuer
+
+  metrics_storage = {
+    bucket_name       = "thanos" # Name given to the bucket
+    endpoint          = module.minio.endpoint
+    access_key        = "readwrite_user" # Name given to the read-write user created by the module MinIO.
+    secret_access_key = module.minio.readwrite_secret_key
+  }
+
+  thanos = {
+    oidc = module.oidc.oidc
+  }
+
+  helm_values = [{ # Note the curly brackets here
+    thanos = {
+      map = {
+        string = "string"
+        bool   = true
+      }
+      sequence = [
+        {
+          key1 = "value1"
+          key2 = "value2"
+        },
+        {
+          key1 = "value1"
+          key2 = "value2"
+        },
+      ]
+      sequence2 = [
+        "string1",
+        "string2"
+      ]
+    }
+  }]
+
+  depends_on = [module.argocd_bootstrap]
+}
+----
+
+=== S3 Bucket
+
+IMPORTANT: You are in charge of creating an S3 bucket for Thanos to store the archived metrics.
+
+We've decided to keep the creation of this bucket outside of this module, mainly because the persistence of the data should not be related to the instantiation of the module itself.
+
+You can create an S3 bucket using the https://github.com/camptocamp/devops-stack-module-minio[MinIO] module by simply adding the bucket name to that module's declaration.
+
+[source,terraform]
+----
+module "minio" {
+  source = "git::https://github.com/camptocamp/devops-stack-module-minio?ref=<RELEASE>"
+
+  cluster_name     = module.kind.cluster_name
+  base_domain      = module.kind.base_domain
+  argocd_namespace = local.argocd_namespace
+
+  minio_buckets = [
+    "thanos", # <--
+    "loki",
+  ]
+
+  depends_on = [module.ingress, module.cert-manager]
+}
+----
+
+NOTE: Do not forget that the bucket configuration also needs to be passed to the module `kube-prometheus-stack`.
+
+=== OIDC
+
+NOTE: This module was developed with OIDC in mind.
+
+There is an OIDC proxy container deployed as a sidecar on each pod that has a web interface. Consequently, the `thanos` variable is expected to have a map `oidc` containing at least the Issuer URL, the Client ID, and the Client Secret.
+
+You can pass these values by pointing an output from another module (as above), or by defining them explicitly:
+
+[source,terraform]
+----
+module "thanos" {
+  ...
+
+  thanos = {
+    oidc = {
+      issuer_url    = "<URL>"
+      client_id     = "<ID>"
+      client_secret = "<SECRET>"
+    }
+  }
+
+  ...
+}
+----
+
+=== Resource Configuration
+
+Since the resource requirements are not the same on every deployment and because the consumed resources also influence the cost associated, we refrained from configuring default resource requirements for the components of Thanos. We did, however, set memory limits for some of the pods (`query`, `storegateway` and `compactor` all have a 1 GB memory limit). These values should be customized as you see fit, although there is not really a need in a test deployment.
+
+== Technical Reference
+
+=== Dependencies
+
+==== `module.oidc`
+
+This module needs an OIDC provider to function and consequently it must be one deployed after the module `oidc`.
+
+==== `module.minio`
+
+This module needs to have the configuration for the S3 bucket and consequently it must be one deployed after the module `minio`.
+
 // BEGIN_TF_DOCS
-=== Requirements
-
-No requirements.
-
-=== Providers
-
-No providers.
-
-=== Modules
-
-The following Modules are called:
-
-==== [[module_thanos]] <<module_thanos,thanos>>
-
-Source: ../
-
-Version:
-
-=== Resources
-
-No resources.
-
-=== Required Inputs
-
-The following input variables are required:
-
-==== [[input_argocd_namespace]] <<input_argocd_namespace,argocd_namespace>>
-
-Description: Namespace used by Argo CD where the Application and AppProject resources should be created.
-
-Type: `string`
-
-==== [[input_base_domain]] <<input_base_domain,base_domain>>
-
-Description: Base domain of the cluster. Value used for the ingress' URL of the application.
-
-Type: `string`
-
-==== [[input_cluster_name]] <<input_cluster_name,cluster_name>>
-
-Description: Name given to the cluster. Value used for the ingress' URL of the application.
-
-Type: `string`
-
-==== [[input_metrics_storage]] <<input_metrics_storage,metrics_storage>>
-
-Description: MinIO S3 bucket configuration values for the bucket where the archived metrics will be stored.
-
-Type:
-[source,hcl]
-----
-object({
-    bucket_name       = string
-    endpoint          = string
-    access_key        = string
-    secret_access_key = string
-  })
-----
-
-=== Optional Inputs
-
-The following input variables are optional (have default values):
-
-==== [[input_cluster_issuer]] <<input_cluster_issuer,cluster_issuer>>
-
-Description: SSL certificate issuer to use. Usually you would configure this value as `letsencrypt-staging` or `letsencrypt-prod` on your root `*.tf` files.
-
-Type: `string`
-
-Default: `"ca-issuer"`
-
-==== [[input_dependency_ids]] <<input_dependency_ids,dependency_ids>>
-
-Description: IDs of the other modules on which this module depends on.
-
-Type: `map(string)`
-
-Default: `{}`
-
-==== [[input_helm_values]] <<input_helm_values,helm_values>>
-
-Description: Helm chart value overrides. They should be passed as a list of HCL structures.
-
-Type: `any`
-
-Default: `[]`
-
-==== [[input_namespace]] <<input_namespace,namespace>>
-
-Description: Namespace where the applications's Kubernetes resources should be created. Namespace will be created in case it doesn't exist.
-
-Type: `string`
-
-Default: `"thanos"`
-
-==== [[input_target_revision]] <<input_target_revision,target_revision>>
-
-Description: Override of target revision of the application chart.
-
-Type: `string`
-
-Default: `"v1.0.0-alpha.4"`
-
-==== [[input_thanos]] <<input_thanos,thanos>>
-
-Description: Most frequently used Thanos settings. This variable is merged with the local value `thanos_defaults`, which contains some sensible defaults. You can check the default values on the link:./local.tf[`local.tf`] file. If there still is anything other that needs to be customized, you can always pass on configuration values using the variable `helm_values`.
-
-Type: `any`
-
-Default: `{}`
-
-=== Outputs
-
-The following outputs are exported:
-
-==== [[output_id]] <<output_id,id>>
-
-Description: ID to pass other modules in order to refer to this module as a dependency. It takes the ID that comes from the main module and passes it along to the code that called this variant in the first place.
 // END_TF_DOCS
+
+=== Reference in table format 
+
+.Show tables
+[%collapsible]
+====
 // BEGIN_TF_TABLES
-
-
-= Modules
-
-[cols="a,a,a",options="header,autowidth"]
-|===
-|Name |Source |Version
-|[[module_thanos]] <<module_thanos,thanos>> |../ |
-|===
-
-= Inputs
-
-[cols="a,a,a,a,a",options="header,autowidth"]
-|===
-|Name |Description |Type |Default |Required
-|[[input_argocd_namespace]] <<input_argocd_namespace,argocd_namespace>>
-|Namespace used by Argo CD where the Application and AppProject resources should be created.
-|`string`
-|n/a
-|yes
-
-|[[input_base_domain]] <<input_base_domain,base_domain>>
-|Base domain of the cluster. Value used for the ingress' URL of the application.
-|`string`
-|n/a
-|yes
-
-|[[input_cluster_issuer]] <<input_cluster_issuer,cluster_issuer>>
-|SSL certificate issuer to use. Usually you would configure this value as `letsencrypt-staging` or `letsencrypt-prod` on your root `*.tf` files.
-|`string`
-|`"ca-issuer"`
-|no
-
-|[[input_cluster_name]] <<input_cluster_name,cluster_name>>
-|Name given to the cluster. Value used for the ingress' URL of the application.
-|`string`
-|n/a
-|yes
-
-|[[input_dependency_ids]] <<input_dependency_ids,dependency_ids>>
-|IDs of the other modules on which this module depends on.
-|`map(string)`
-|`{}`
-|no
-
-|[[input_helm_values]] <<input_helm_values,helm_values>>
-|Helm chart value overrides. They should be passed as a list of HCL structures.
-|`any`
-|`[]`
-|no
-
-|[[input_metrics_storage]] <<input_metrics_storage,metrics_storage>>
-|MinIO S3 bucket configuration values for the bucket where the archived metrics will be stored.
-|
-
-[source]
-----
-object({
-    bucket_name       = string
-    endpoint          = string
-    access_key        = string
-    secret_access_key = string
-  })
-----
-
-|n/a
-|yes
-
-|[[input_namespace]] <<input_namespace,namespace>>
-|Namespace where the applications's Kubernetes resources should be created. Namespace will be created in case it doesn't exist.
-|`string`
-|`"thanos"`
-|no
-
-|[[input_target_revision]] <<input_target_revision,target_revision>>
-|Override of target revision of the application chart.
-|`string`
-|`"v1.0.0-alpha.4"`
-|no
-
-|[[input_thanos]] <<input_thanos,thanos>>
-|Most frequently used Thanos settings. This variable is merged with the local value `thanos_defaults`, which contains some sensible defaults. You can check the default values on the link:./local.tf[`local.tf`] file. If there still is anything other that needs to be customized, you can always pass on configuration values using the variable `helm_values`.
-|`any`
-|`{}`
-|no
-
-|===
-
-= Outputs
-
-[cols="a,a",options="header,autowidth"]
-|===
-|Name |Description
-|[[output_id]] <<output_id,id>> |ID to pass other modules in order to refer to this module as a dependency. It takes the ID that comes from the main module and passes it along to the code that called this variant in the first place.
-|===
 // END_TF_TABLES
+====
